--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
     "framer-motion": "https://esm.sh/framer-motion@11.0.8?external=react,react-dom",
     "@tanstack/react-query": "https://esm.sh/@tanstack/react-query@5.25.0?external=react,react-dom",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/"
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "zod": "https://esm.sh/zod@3.22.4"
   }
 }
 </script>
