--- a/index.html
+++ b/index.html
@@ -66,7 +66,11 @@
     "@tanstack/react-query": "https://esm.sh/@tanstack/react-query@5.25.0?external=react,react-dom",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "zod": "https://esm.sh/zod@3.22.4"
+    "zod": "https://esm.sh/zod@3.22.4",
+    "path": "https://esm.sh/path@^0.12.7",
+    "url": "https://esm.sh/url@^0.11.4",
+    "fs": "https://esm.sh/fs@^0.0.1-security",
+    "express": "https://esm.sh/express@^5.2.1"
   }
 }
 </script>
