--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         font-family: 'Inter', sans-serif;
         background-color: #000000;
         color: #e2e8f0;
-        overflow: hidden; /* Empêche le scroll global pour l'app layout */
+        /* Overflow hidden supprimé pour permettre le scroll sur mobile */
       }
       
       /* Noise texture overlay */
